--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,20 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+    - name: Configure test network interfaces
+      run: |
+        sudo ip addr add 192.168.0.6/24 dev eth0
+        sudo ip addr add 192.168.0.7/24 dev eth0
+        sudo ip addr add 192.168.0.8/24 dev eth0
+        sudo ip link set dev lo up
     - name: Run tests
-      run: cargo test --verbose -- --test-threads=1
+      run: cargo test --lib --verbose --no-run
+    - name: Run integration tests
+      run: cargo test --test "*" --verbose -- --nocapture --test-threads=1
+    - name: Run doc tests
+      run: cargo test --doc --verbose
+    - name: Run ignored tests
+      run: cargo test --verbose -- --ignored --test-threads=1
 
   test-windows:
 
@@ -27,8 +39,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose -- --test-threads=1
+
+    - name: Configure test network interfaces
+      shell: powershell
+      run: |
+        New-NetIPAddress -InterfaceAlias "Ethernet" -IPAddress "192.168.0.6" -PrefixLength 24
+        New-NetIPAddress -InterfaceAlias "Ethernet" -IPAddress "192.168.0.7" -PrefixLength 24
+        New-NetIPAddress -InterfaceAlias "Ethernet" -IPAddress "192.168.0.8" -PrefixLength 24
+        
+    - name: Run unit tests
+      run: cargo test --lib --verbose --no-run
+      
+    - name: Run integration tests
+      run: cargo test --test "*" --verbose -- --nocapture --test-threads=1
+      
+    - name: Run doc tests
+      run: cargo test --doc --verbose
+      
+    - name: Run ignored tests
+      run: cargo test --verbose -- --ignored --test-threads=1
 
