--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,7 +34,7 @@ jobs:
       run: cargo test ipv4 --verbose -- --ignored --test-threads=1 --nocapture
 
   test-windows:
-    runs-on: windows-latest
+    runs-on: windows-2019
     
     steps:
     - uses: actions/checkout@v4
