--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,8 +39,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    # - name: Set up Docker
-    #   uses: docker/setup-buildx-action@v3
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v3
+      with:
+        version: latest
     
     - name: Build test container
       run: |
