--- a/docker-ipv4-test/Dockerfile
+++ b/docker-ipv4-test/Dockerfile
@@ -8,10 +8,10 @@ LABEL description="Windows container for IPv4 sACN testing"
 WORKDIR /app
 
 # Install Rust using rustup
-# RUN powershell -Command \
-#     Invoke-WebRequest -Uri https://win.rustup.rs/x86_64 -OutFile rustup-init.exe; \
-#     Start-Process -Wait -FilePath .\rustup-init.exe -ArgumentList '-y'; \
-#     Remove-Item rustup-init.exe
+RUN powershell -Command \
+    Invoke-WebRequest -Uri https://win.rustup.rs/x86_64 -OutFile rustup-init.exe; \
+    Start-Process -Wait -FilePath .\rustup-init.exe -ArgumentList '-y'; \
+    Remove-Item rustup-init.exe
 
 # Add Rust binaries to PATH
 ENV PATH="C:\Users\ContainerAdministrator\.cargo\bin;${PATH}"
