--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,9 +27,10 @@ jobs:
     # - name: Run tests
     #   run: cargo test --lib --verbose --no-run
     - name: Run integration tests
-      run: cargo test --test "*" -- --nocapture --test-threads=1
-      run: cargo test --doc
-      run: cargo test ipv4 -- --ignored --test-threads=1 --nocapture
+      run: |
+        cargo test --test "*" -- --nocapture --test-threads=1
+        cargo test --doc
+        cargo test ipv4 -- --ignored --test-threads=1 --nocapture
 
   test-windows:
     runs-on: windows-latest
@@ -47,8 +48,9 @@ jobs:
     # - name: Run tests
     #   run: cargo test --lib --verbose --no-run
     - name: Run integration tests
-      run: cargo test --test "*" -- --nocapture --test-threads=1
-      run: cargo test --doc
+      run: |
+        cargo test --test "*" -- --nocapture --test-threads=1
+        cargo test --doc
 
   test-windows-ipv4:
     runs-on: windows-2022
