--- a/docker-ipv4-test/Dockerfile
+++ b/docker-ipv4-test/Dockerfile
@@ -38,7 +38,7 @@ COPY tests/ ./tests/
 # Copy test scripts
 COPY docker-ipv4-test/scripts/configure-ip.ps1 ./scripts/
 COPY docker-ipv4-test/scripts/run-tests.ps1 ./scripts/
-COPY docker-ipv4-test/tests/ipv4_tests.ps1 ./tests/
+#COPY docker-ipv4-test/tests/ipv4_tests.ps1 ./tests/
 
 # Make scripts executable
 RUN powershell -Command \
