--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,10 +74,11 @@ jobs:
         1..3 | ForEach-Object {
           & $devcon install "$env:WINDIR\Inf\netloop.inf" *msloop
         }
-        Start-Sleep -Seconds 3
-
+        echo "waiting..."
+        Start-Sleep -Seconds 5
+        echo "get adapters..."
         # Grab the new adapters, rename them, and assign one IP each
-        $loopbacks = Get-NetAdapter -InterfaceDescription "Microsoft KM-TEST Loopback Adapter" | Sort-Object ifIndex
+        $loopbacks = Get-NetAdapter | Where {$_.InterfaceDescription -like "*Loopback*"} | Sort-Object ifIndex
         if ($loopbacks.Count -lt 3) { throw "Expected 3 loopback adapters, found $($loopbacks.Count)" }
 
         for ($i = 0; $i -lt 3; $i++) {
