--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,8 +47,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
-    # - name: Run tests
-    #   run: cargo test --lib --verbose --no-run
     - name: Run integration tests
       run: |
         cargo test --lib --no-run
@@ -79,7 +77,8 @@ jobs:
         echo "get adapters..."
         # Grab the new adapters, rename them, and assign one IP each
         $loopbacks = Get-NetAdapter | Where {$_.InterfaceDescription -like "*Loopback*"} | Sort-Object ifIndex
-        echo $loopbacks
+        Get-NetIPAddress -AddressFamily IPv4
+        Start-Sleep -Seconds 5
         if ($loopbacks.Count -lt 3) { throw "Expected 3 loopback adapters, found $($loopbacks.Count)" }
 
         for ($i = 0; $i -lt 3; $i++) {
@@ -91,42 +90,6 @@ jobs:
 
         Write-Host "Configured:"
         Get-NetIPAddress -AddressFamily IPv4 | Where-Object {$_.InterfaceAlias -like "Loopback*"} | Format-Table InterfaceAlias,IPAddress,PrefixLength
-      # run: |
-      #   $ip1="192.168.0.6"
-      #   $ip2="192.168.0.7"
-      #   $ip3="192.168.0.8"
-      #   $prefixLength=24
-      #   $adapter = Get-NetAdapter | Where {$_.Name -like "Eth*"} | select -first 1
-      #   echo $adapter
-      #   New-NetIPAddress -InterfaceAlias $adapter.Name -IPAddress $ip1 -PrefixLength $prefixLength
-      #   New-NetIPAddress -InterfaceAlias $adapter.Name -IPAddress $ip2 -PrefixLength $prefixLength
-      #   New-NetIPAddress -InterfaceAlias $adapter.Name -IPAddress $ip3 -PrefixLength $prefixLength
-      #   echo "configed IP"
-      # ./docker-ipv4-test/scripts/configure-ip.ps1
-      # ./docker-ipv4-test/scripts/run-tests.ps1
     - name: Run tests
       shell: powershell
       run: cargo test ipv4 -- --ignored --no-capture --test-threads=1
-
-  # windows-ipv4:
-  #   runs-on: windows-2022
-    
-  #   steps:
-  #   - uses: actions/checkout@v4
-
-  #   - name: Build test container
-  #     shell: powershell
-  #     run: docker build --file docker-ipv4-test/Dockerfile --isolation=hyperv -t ipv4-test . #|
-  #   # cd docker-ipv4-test
-  #   #    docker build --file docker-ipv4-test/Dockerfile --isolation=hyperv -t ipv4-test .
-    
-  #   - name: Run tests in container
-  #     shell: powershell
-  #     run: |
-  #       docker run --rm `
-  #         --isolation=hyperv `
-  #         -e IP_ADDRESS_1=192.168.0.6 `
-  #         -e IP_ADDRESS_2=192.168.0.7 `
-  #         -e IP_ADDRESS_3=192.168.0.8 `
-  #         -e PREFIX_LENGTH=24 `
-  #         ipv4-test
