--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,10 +77,10 @@ jobs:
         echo "get adapters..."
         # Grab the new adapters, rename them, and assign one IP each
         $loopbacks = Get-NetAdapter | Where {$_.InterfaceDescription -like "*Loopback*"} | Sort-Object ifIndex
-        Get-NetIPAddress -AddressFamily IPv4
-        Start-Sleep -Seconds 5
+        Get-NetIPAddress | Where {$_.InterfaceDescription -like "*Loopback*"} | Format-Table InterfaceAlias,InterfaceDescription,IPAddress,PrefixLength
+        Start-Sleep -Seconds 30
         if ($loopbacks.Count -lt 3) { throw "Expected 3 loopback adapters, found $($loopbacks.Count)" }
-
+        echo "waiting an arbitrary time for nic to stop identifying"
         for ($i = 0; $i -lt 3; $i++) {
           $alias = "Loopback$($i+1)"
           Rename-NetAdapter -Name $loopbacks[$i].Name -NewName $alias
